...
        android:layout_marginTop="32dp"
        android:text="@string/time_limit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_time_limit_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/start_game"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_cards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sc_reverse_qa" />

    <ToggleButton
        android:id="@+id/toggle_repeatGame_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
...
        android:textOff="repeat game until all correct"
        android:textOn="repeat game until all correct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ListView
        android:id="@+id/lv_select_gg_cards"
        android:layout_width="0dp"
        android:layout_height="290dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:layout_marginTop="28dp"
        android:text="@string/max_num_cards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_max_cards_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView3"
...
