...
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_gg_frag_holder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cl_gg_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_gg_frag_holder">

        <TextView
            android:id="@+id/tv_remaining_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/time_limit_remaining"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_exit_game"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_exit_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/exit_gg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_next_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_card"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/btn_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/submit"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
